removing unnecessary import from 02_.ipynb

--- a/src/notebooks/02_preprocessing.ipynb
+++ b/src/notebooks/02_preprocessing.ipynb
@@ -13,10 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get the path from config file\n",
+    "\n",
     "import yaml\n",
     "\n",
     "with open(\"../../config.yaml\", \"r\") as file:\n",
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -40,15 +42,10 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
+    "# import the libraries\n",
+    "\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import pandas as pd"
    ]
   },
   {
