added model evaluation

--- a/src/notebooks/03_modeling.ipynb
+++ b/src/notebooks/03_modeling.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Notebook for model training\n",
     "\n",
-    "# This notebook trains and evaluates machine learning models on the preprocessed dataset."
+    "# This notebook trains machine learning models on the preprocessed dataset."
    ]
   },
   {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,10 +42,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "import pandas as pd\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import pandas as pd"
    ]
   },
   {
